# hc-spin

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  flake.nix  package.json  tsconfig.node.json
.github/workflows/: release-prepare.yml  release-publish.yml  test.yaml
cli/: cli.js
docs/: DEVSETUP.md
rust-utils/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
rust-utils/.github/workflows/: CI.yml
rust-utils/npm/darwin-x64/: README.md  package.json
rust-utils/npm/linux-x64-gnu/: README.md  package.json
rust-utils/npm/win32-x64-msvc/: README.md  package.json
rust-utils/src/: decode_webhapp.rs  lib.rs
scripts/: replace-electron-version.js
src/main/: index.ts  menu.ts  validateArgs.ts  vite-env.d.ts  windows.ts
src/preload/: index.ts
src/renderer/: index.html  indexNotFound1.html  indexNotFound2.html
src/renderer/src/: renderer.ts
